# ZoneDetect

./: CMakeLists.txt  conanfile.py  demo.c
database/builder/: CMakeLists.txt  builder.cpp
test/: CMakeLists.txt  test.cpp
